[package]
name = "tryrocksdb"
version = "0.1.0"
authors = ["Tobias Schottdorf <tobias.schottdorf@gmail.com>"]

[lib]
crate-type = ["staticlib"] # staticlib or cdylib?

[dependencies]
libc = "*"

[dependencies.rocksdb]
git = "https://github.com/pingcap/rust-rocksdb.git"
#features = ["static-link"] // brew install rocksdb
